correction drone file too large

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,4 +1,5 @@
-img {
+img,
+video {
     display: block;
     margin: 5em auto;
     border: 1px solid #ddd;
